# BaslerCameraHardwareTrigger_GigE

./: .gitignore  CMakeLists.txt  Grab.cpp  README.md
Examples/: Grab.cpp
Grab/: Grab
flow/: times.txt  times1.txt  times2.txt
include/: camthread.h
src/: camthread.cpp
temp/: CameraGrabberBasler.cpp  ImageGrabController.cpp
